--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <li class="item_2">
        <img src="takumi.jpg" width="100" height="100">
        <div class="kana_2">うえだ　たくみ</div>
-       <div class="kanji_2">植田　匠</div>
+       <div class="kanji_2">植田　匠海</div>
        <div class="gakubu_2">商学部<br>商学科</div>
       </li>
 
